--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "devDependencies": {
+  "dependencies": {
     "@tailwindcss/cli": "^4.1.18",
     "@tailwindcss/typography": "^0.5.19",
     "autoprefixer": "^10.4.23",
