--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ variables:
   # Time zone
   TZ: Europe/Oslo
 image:
-  name: veriphor/hugo:0.155.1
+  name: veriphor/hugo:0.155.3
 pages:
   stage: deploy
   script:
@@ -16,7 +16,7 @@ pages:
 
     # Build the site
     - echo "Building the site..."
-    - hugo --gc --minify --baseURL "${CI_PAGES_URL}"
+    - hugo build --gc --minify --baseURL "${CI_PAGES_URL}"
 
     # Compress published files
     - echo "Compressing published files..."
